# MIRA-2.0

./: .gitignore  CMakeLists.txt  README.md  Singh_Shobhit_CPRE5450_Mermaid_Diagrams.md  Singh_Shobhit_CPRE5450_Report.aux  Singh_Shobhit_CPRE5450_Report.out  Singh_Shobhit_CPRE5450_Report.tex  Singh_Shobhit_CPRE5450_Report.toc  presentation_content.txt  sdkconfig
docs/: index.html
main/: CMakeLists.txt  camera_control.c  camera_control.h  ft_activation.c  ft_activation.h  idf_component.yml  main.c  mic_capture.c  mic_capture.h  mmwave_sensor.c  mmwave_sensor.h  oled_control.c  oled_control.h  sd_card.c  sd_card.h  servo_control.c  servo_control.h  training.c  training.h  vision_config.h  vision_pipeline.cpp  vision_pipeline.h  vision_types.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
